# zero-eq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: Compressor.cpp  Compressor.h  DynamicEQDetector.cpp  DynamicEQDetector.h  EQBand.cpp  EQBand.h  EQEngine.cpp  EQEngine.h  HarmonicShaper.cpp  HarmonicShaper.h  LevelMeter.cpp  LevelMeter.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
Source/GUI/: BandControlPanel.cpp  BandControlPanel.h  CompressorPanel.cpp  CompressorPanel.h  EQCurveComponent.cpp  EQCurveComponent.h  IOPanel.cpp  IOPanel.h  PresetBar.cpp  PresetBar.h  ZeroEQLookAndFeel.cpp  ZeroEQLookAndFeel.h
